// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation Condensed 1`] = `
<div
  class="SideNavigation-sideNavigation-0 SideNavigation-condensed-0"
>
  <ui5-list
    mode="None"
    separators="All"
  >
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="home"
      id="home"
      title="Nav To Home Tooltip"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="home"
      />
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="calendar"
      id="calendar"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="calendar"
      />
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="customers"
      id="customers"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="employee"
      />
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-has-children=""
      data-id="sales"
      id="sales"
      selected="true"
      type="Active"
    >
      <span>
        <ui5-icon
          class="SideNavigationListItem-icon-0"
          name="lead"
        />
        <div
          class="SideNavigationListItem-condensedExpandTriangle-0"
        />
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="delivieries"
      id="delivieries"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="add-product"
      />
    </ui5-li-custom>
  </ui5-list>
  <span
    style="flex-grow: 1;"
  />
  <span
    class="SideNavigation-footerItemsSeparator-0"
  />
  <ui5-list
    mode="None"
    separators="All"
  >
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="1"
      id="1"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="compare"
      />
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="2"
      id="2"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="chain-link"
      />
    </ui5-li-custom>
  </ui5-list>
</div>
`;

exports[`SideNavigation Expanded 1`] = `
<div
  class="SideNavigation-sideNavigation-0 SideNavigation-expanded-0"
>
  <ui5-list
    mode="None"
    separators="All"
  >
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="home"
      id="home"
      title="Nav To Home Tooltip"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="home"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Overview
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="calendar"
      id="calendar"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="calendar"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Calendar
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="customers"
      id="customers"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="employee"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Customers
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-has-children=""
      data-id="sales"
      data-is-expanded=""
      id="sales"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="lead"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Sales
      </span>
      <ui5-icon
        class="SideNavigationListItem-expandArrow-0"
        name="navigation-down-arrow"
      />
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="sales-opportunities"
      data-is-child=""
      id="sales-opportunities"
      style="--ui5-listitem-border-bottom: none;"
      type="Active"
    >
      <span
        class="SideNavigationListItem-icon-0"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        My Opportunities
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="sales-leads"
      data-is-child=""
      id="sales-leads"
      selected="true"
      style="--ui5-listitem-border-bottom: none;"
      type="Active"
    >
      <span
        class="SideNavigationListItem-icon-0"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        My Leads
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="sales-cpqs"
      data-is-child=""
      id="sales-cpqs"
      type="Active"
    >
      <span
        class="SideNavigationListItem-icon-0"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        My CPQS
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="delivieries"
      id="delivieries"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="add-product"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Deliveries
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="support"
      id="support"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="add-product"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Support Tickets
      </span>
    </ui5-li-custom>
  </ui5-list>
  <span
    style="flex-grow: 1;"
  />
  <span
    class="SideNavigation-footerItemsSeparator-0"
  />
  <ui5-list
    mode="None"
    separators="All"
  >
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="1"
      id="1"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="compare"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Legal Information
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0"
      data-id="2"
      id="2"
      type="Active"
    >
      <ui5-icon
        class="SideNavigationListItem-icon-0"
        name="chain-link"
      />
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Useful Links
      </span>
    </ui5-li-custom>
  </ui5-list>
</div>
`;

exports[`SideNavigation Expanded without Icons 1`] = `
<div
  class="SideNavigation-sideNavigation-0 SideNavigation-expanded-0"
>
  <ui5-list
    mode="None"
    separators="All"
  >
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="home"
      id="home"
      title="Nav To Home Tooltip"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Overview
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="calendar"
      id="calendar"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Calendar
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="customers"
      id="customers"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Customers
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-has-children=""
      data-id="sales"
      data-is-expanded=""
      id="sales"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Sales
      </span>
      <ui5-icon
        class="SideNavigationListItem-expandArrow-0"
        name="navigation-down-arrow"
      />
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="sales-opportunities"
      data-is-child=""
      id="sales-opportunities"
      style="--ui5-listitem-border-bottom: none;"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        My Opportunities
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="sales-leads"
      data-is-child=""
      id="sales-leads"
      selected="true"
      style="--ui5-listitem-border-bottom: none;"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        My Leads
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="sales-cpqs"
      data-is-child=""
      id="sales-cpqs"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        My CPQS
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="delivieries"
      id="delivieries"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Deliveries
      </span>
    </ui5-li-custom>
  </ui5-list>
  <span
    style="flex-grow: 1;"
  />
  <span
    class="SideNavigation-footerItemsSeparator-0"
  />
  <ui5-list
    mode="None"
    separators="All"
  >
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="1"
      id="1"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Legal Information
      </span>
    </ui5-li-custom>
    <ui5-li-custom
      class="SideNavigationListItem-listItem-0 SideNavigationListItem-noIcons-0"
      data-id="2"
      id="2"
      type="Active"
    >
      <span
        class="Text-text-0 SideNavigationListItem-text-0"
      >
        Useful Links
      </span>
    </ui5-li-custom>
  </ui5-list>
</div>
`;
